@@ -28,3 +28,6 @@ redis_port = 6380
 # Custom prefix for rebranding
 #custom_prefix = zentyal
 
+# Verify servers from EBox::RESTClient
+# Values: yes | no
+rest_verify_servers = yes
